refactor(auth-service): simplify UserDetailsImpl and update UserDetailsServiceImpl for user repository integration